2005-01-12  Pawel Salek

	* libbalsa/imap/imap-commands.c: work around broken dovecot indexes.

2005-01-07 09:47  PeterB

	* src/main-window.c: Use hyphen instead of underscore in translator
	credits.
	* src/balsa-mblist.c: restore separator in
	balsa_mblist_mru_option_menu(); remove unused variable.

2005-01-07  Pawel Salek

	* libbalsa/libbalsa.h: add mailbox manipulation error codes.
	* libbalsa/mailbox_imap.[hc]: return more info on error.
	* src/folder-conf.c: handle errors better.
	* src/mailbox-conf.c: ditto.

2005-01-06  Pawel Salek

	* libbalsa/imap/imap-handle.c: silence debugging output.
	* libinit_balsa/balsa-druid-page-user.[hc]: port initial wizard
	improvements.
	* src/balsa-mblist.c: protect against D&D crashes.

2005-01-05 09:05  PeterB

	* libbalsa/mailbox_local.c: use second GNode tree in jwz-threading.

2005-01-04  Pawel Salek

	* libbalsa/mailbox_local.c: remove bogus test from msg matching (PB).

2005-01-03 19:09  PeterB/manu <eallaud@yahoo.fr>

	* libbalsa/mailbox_local.c: check for NULL msg-id.

2006-01-02  Pawel Salek

	* libbalsa/filter.c, libbalsa/misc.[hc]: move in_string_utf8() to misc
	* libbalsa/libbalsa_private.h:
	* libbalsa/mailbox.c: move LibBalsaMailboxEntry def to private.h
	* libbalsa/mailbox_local.c: implement faster searching code
	(manyfold speedup for large mailboxes).

2004-12-31 12:08  Albrecht Dreß <albrecht.dress@arcor.de>

	* libbalsa/body.h, libbalsa/files.c, libbalsa/files.h,
	libbalsa/send.c, src/balsa-message.c, src/print.c,
	src/sendmsg-window.c, src/pixmaps/info_lock.xpm,
	src/pixmaps/info_lock_bad.xpm, src/pixmaps/info_lock_encr.xpm,
	src/pixmaps/info_lock_good.xpm, src/pixmaps/info_lock_sigtrust.xpm:
	new attachment handling code.

2004-12-30 17:04  PeterB

	* libbalsa/: mailbox.c, mailbox.h, mailbox_local.c: reduce the
	amount of tree modification when updating threading.
	* libbalsa/send.c: convert file name to utf-8 for GMime.

2004-12-29 11:49  PeterB
